--- a/app/src/main/res/layout/activity_edit_profil_mahasiswa.xml
+++ b/app/src/main/res/layout/activity_edit_profil_mahasiswa.xml
@@ -207,17 +207,16 @@
 
             </LinearLayout>
 
-            <LinearLayout
+            <RelativeLayout
                 android:id="@+id/ll_tanggal_lahir"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/ll_alamat"
                 android:layout_marginHorizontal="16dp"
-                android:layout_marginTop="16dp"
-                android:gravity="center_vertical"
-                android:orientation="vertical">
+                android:layout_marginTop="16dp">
 
                 <TextView
+                    android:id="@+id/tv1_tgl_lahir"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Tanngal Lahir*"
@@ -228,15 +227,26 @@
                     android:id="@+id/et_tanggal_lahir_edit_profil"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_below="@+id/tv1_tgl_lahir"
                     android:backgroundTint="@color/colorPrimary"
                     android:focusableInTouchMode="false"
                     android:hint=""
                     android:inputType="text"
                     android:maxLines="1"
+                    android:drawableRight="@drawable/ic_baseline_add_24"
                     android:textColor="@color/black"
                     android:textStyle="bold" />
 
-            </LinearLayout>
+                <ImageView
+                    android:id="@+id/img_date"
+                    android:layout_centerVertical="true"
+                    android:layout_alignParentRight="true"
+                    android:src="@drawable/ic_date_range_fill"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:tint="@color/colorPrimary" />
+
+            </RelativeLayout>
 
             <View
                 android:id="@+id/view1"
