--- a/app/src/main/res/layout/item_pengalaman.xml
+++ b/app/src/main/res/layout/item_pengalaman.xml
@@ -2,6 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_marginHorizontal="16dp"
     android:layout_marginVertical="12dp">
 
@@ -32,23 +33,35 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/tv_judul_item_pengalaman"
         android:layout_marginHorizontal="16dp"
+        android:layout_marginTop="3dp"
         android:layout_toRightOf="@id/img_kantor_item_pengalaman"
         android:ellipsize="end"
-        android:maxLines="1"
-        android:layout_marginTop="3dp"
-        android:textColor="@color/black"
         android:text="CV. UINAM Find"
+        android:textColor="@color/black"
         android:textSize="12sp" />
 
     <TextView
-        android:textSize="12sp"
-        android:layout_marginTop="5dp"
-        android:layout_marginHorizontal="16dp"
-        android:layout_toRightOf="@id/img_kantor_item_pengalaman"
-        android:layout_below="@id/tv_nama_kantor_item_pengalaman"
-        android:textColor="@color/grey_hint"
-        android:text="Feb 2022 - Sekarang"
+        android:id="@+id/tv_masa_item_pengalaman"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:layout_below="@id/tv_nama_kantor_item_pengalaman"
+        android:layout_marginHorizontal="16dp"
+        android:layout_marginTop="5dp"
+        android:layout_toRightOf="@id/img_kantor_item_pengalaman"
+        android:text="Feb 2022 - Sekarang"
+        android:textColor="@color/grey_hint"
+        android:textSize="12sp" />
+
+    <TextView
+        android:id="@+id/tv_desc_item_pengalaman_mahasiswa"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/tv_masa_item_pengalaman"
+        android:layout_marginTop="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_toRightOf="@id/img_kantor_item_pengalaman"
+        android:textColor="@color/black"
+        android:textSize="12sp"
+        tools:text="@string/lorem_ipsum_long" />
 
 </RelativeLayout>
