--- a/app/src/main/res/layout/activity_edit_pengalaman_mahasiswa.xml
+++ b/app/src/main/res/layout/activity_edit_pengalaman_mahasiswa.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorBackgroundActivity"
-    tools:context=".ui.saya.pengalaman.AddPengalamanMahasiswaActivity">
+    tools:context=".ui.saya.pengalaman.EditPengalamanMahasiswaActivity">
 
     <RelativeLayout
         android:id="@+id/rl_toolbar_pengalaman"
@@ -31,9 +31,19 @@
             android:layout_centerVertical="true"
             android:layout_marginLeft="5dp"
             android:layout_toRightOf="@id/img_back_pengalaman"
-            android:text="Tambah Pengalaman"
+            android:text="Edit Pengalaman"
             android:textColor="@color/white"
             android:textStyle="bold" />
+
+        <ImageView
+            android:id="@+id/img_delete_pengalaman"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_marginHorizontal="16dp"
+            android:src="@drawable/ic_trash"
+            app:tint="@color/white" />
 
     </RelativeLayout>
 
@@ -210,8 +220,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/tv1_tgl_mulai"
-                    android:backgroundTint="@color/colorPrimary"
                     android:layout_toLeftOf="@id/img_date"
+                    android:backgroundTint="@color/colorPrimary"
                     android:focusableInTouchMode="false"
                     android:hint=""
                     android:inputType="text"
@@ -251,8 +261,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/tv1_tgl_berakhir"
-                    android:backgroundTint="@color/colorPrimary"
                     android:layout_toLeftOf="@id/img_date1"
+                    android:backgroundTint="@color/colorPrimary"
                     android:focusableInTouchMode="false"
                     android:hint=""
                     android:inputType="text"
@@ -334,5 +344,6 @@
 
 
     </RelativeLayout>
+
 
 </RelativeLayout>
