--- a/app/src/main/res/layout/item_keahlian.xml
+++ b/app/src/main/res/layout/item_keahlian.xml
@@ -2,18 +2,20 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_marginVertical="10dp"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_marginVertical="12dp"
     android:layout_marginRight="10dp"
     android:background="@drawable/bg_primary_trans_corner_16"
-    android:paddingHorizontal="12dp"
+    android:paddingHorizontal="16dp"
     android:paddingVertical="8dp">
 
     <TextView
         android:id="@+id/tv_nama_item_keahlian"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Android Develpoer"
+        android:textSize="16sp"
         android:textColor="@color/colorPrimary"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        tools:text="Android Develpoer" />
 
 </RelativeLayout>
