--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -20,4 +20,9 @@
     </style>
     <style name="Theme.UINAMFind.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
     <style name="Theme.UINAMFind.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+
+    <style name="AppTheme.Picker" parent="Theme.MaterialComponents.DayNight.NoActionBar" >
+        <item name="android:textSize">28sp</item>
+    </style>
+    
 </resources>
