make UI option dialog

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -714,7 +714,7 @@
     <FrameLayout
         android:id="@+id/continer_bottom_sheet_menu_home"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:background="@drawable/bg_white_corner_top_20"
         app:behavior_hideable="true"
         app:behavior_peekHeight="0dp"
