--- a/app/src/main/res/layout/dialog_bottom_sheet_menu_saya.xml
+++ b/app/src/main/res/layout/dialog_bottom_sheet_menu_saya.xml
@@ -1,26 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:paddingBottom="20dp"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="@color/white"
+    android:paddingBottom="20dp">
 
-<!--    <ImageView-->
-<!--        android:id="@+id/img_close"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_marginLeft="24dp"-->
-<!--        android:layout_marginTop="10dp"-->
-<!--        android:layout_marginRight="16sp"-->
-<!--        android:src="@drawable/ic_close_black_24dp"-->
-<!--        app:tint="@color/colorPrimary" />-->
+    <!--    <ImageView-->
+    <!--        android:id="@+id/img_close"-->
+    <!--        android:layout_width="wrap_content"-->
+    <!--        android:layout_height="wrap_content"-->
+    <!--        android:layout_marginLeft="24dp"-->
+    <!--        android:layout_marginTop="10dp"-->
+    <!--        android:layout_marginRight="16sp"-->
+    <!--        android:src="@drawable/ic_close_black_24dp"-->
+    <!--        app:tint="@color/colorPrimary" />-->
 
     <TextView
         android:id="@+id/tv1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="26dp"
-        android:layout_marginTop="12dp"
+        android:layout_marginHorizontal="30dp"
+        android:layout_marginTop="20dp"
         android:text="Opsi"
         android:textColor="@color/colorPrimary"
         android:textSize="18sp"
@@ -32,7 +34,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/tv1"
         android:layout_marginHorizontal="16dp"
-        android:layout_marginTop="22dp"
+        android:layout_marginTop="26dp"
         android:gravity="center_vertical"
         android:orientation="horizontal"
         android:paddingVertical="5dp">
@@ -59,7 +61,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/ll_pengaturan_dialog"
         android:layout_marginHorizontal="16dp"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="16dp"
         android:gravity="center_vertical"
         android:orientation="horizontal"
         android:paddingVertical="5dp">
@@ -80,40 +82,40 @@
 
     </LinearLayout>
 
-    <LinearLayout
-        android:id="@+id/ll_simpan_card_dialog"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/ll_edit_profil_dialog"
-        android:layout_marginHorizontal="16dp"
-        android:layout_marginTop="12dp"
-        android:gravity="center_vertical"
-        android:orientation="horizontal"
-        android:paddingVertical="5dp">
+    <!--    <LinearLayout-->
+    <!--        android:id="@+id/ll_simpan_card_dialog"-->
+    <!--        android:layout_width="match_parent"-->
+    <!--        android:layout_height="wrap_content"-->
+    <!--        android:layout_below="@id/ll_edit_profil_dialog"-->
+    <!--        android:layout_marginHorizontal="16dp"-->
+    <!--        android:layout_marginTop="16dp"-->
+    <!--        android:gravity="center_vertical"-->
+    <!--        android:orientation="horizontal"-->
+    <!--        android:paddingVertical="5dp">-->
 
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ic_baseline_contact_emergency_24"
-            app:tint="@color/grey" />
+    <!--        <ImageView-->
+    <!--            android:layout_width="wrap_content"-->
+    <!--            android:layout_height="wrap_content"-->
+    <!--            android:src="@drawable/ic_baseline_contact_emergency_24"-->
+    <!--            app:tint="@color/grey" />-->
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="16dp"
-            android:text="Unduh Card Profil"
-            android:textColor="@color/grey"
-            android:textStyle="bold" />
+    <!--        <TextView-->
+    <!--            android:layout_width="wrap_content"-->
+    <!--            android:layout_height="wrap_content"-->
+    <!--            android:layout_marginHorizontal="16dp"-->
+    <!--            android:text="Unduh Card Profil"-->
+    <!--            android:textColor="@color/grey"-->
+    <!--            android:textStyle="bold" />-->
 
-    </LinearLayout>
+    <!--    </LinearLayout>-->
 
     <LinearLayout
         android:id="@+id/ll_share_profile_dialog"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/ll_simpan_card_dialog"
+        android:layout_below="@id/ll_edit_profil_dialog"
         android:layout_marginHorizontal="16dp"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="16dp"
         android:gravity="center_vertical"
         android:orientation="horizontal"
         android:paddingVertical="5dp">
@@ -133,5 +135,6 @@
             android:textStyle="bold" />
 
     </LinearLayout>
+
 
 </RelativeLayout>
