--- a/app/src/main/res/layout/item_card_mahasiswa.xml
+++ b/app/src/main/res/layout/item_card_mahasiswa.xml
@@ -21,6 +21,11 @@
             android:scaleType="centerCrop"
             android:src="@drawable/header_mahasiswa_default" />
 
+        <ImageView
+            android:id="@+id/img_lable_mahasiswa"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:src="@drawable/ic_lable_alumni" />
         <RelativeLayout
             android:id="@+id/rl_photo_card_item_mahasiswa"
             android:layout_width="50dp"
