--- a/app/src/main/res/layout/item_mahasiswa2.xml
+++ b/app/src/main/res/layout/item_mahasiswa2.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginHorizontal="8dp"
@@ -16,7 +17,7 @@
         <ImageView
             android:id="@+id/img_header_item_mahasiswa2"
             android:layout_width="match_parent"
-            android:layout_height="100dp"
+            android:layout_height="60dp"
             android:layout_centerHorizontal="true"
             android:scaleType="centerCrop"
             android:src="@drawable/header_mahasiswa_default" />
@@ -69,10 +70,10 @@
             android:layout_marginTop="12dp"
             android:ellipsize="end"
             android:maxLines="1"
-            android:text="Ray Cemerlang"
             android:textColor="@color/black"
             android:textSize="16sp"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            tools:text="Ray Cemerlang" />
 
         <LinearLayout
             android:id="@+id/ll_jurusan_item_mahasiswa2"
@@ -95,9 +96,9 @@
                 android:id="@+id/tv_jurusan_item_mahasiswa2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Ilmu Hadits"
                 android:textColor="@color/black"
-                android:textSize="10sp" />
+                android:textSize="12sp"
+                tools:text="Ilmu Hadits" />
 
         </LinearLayout>
 
@@ -112,9 +113,10 @@
             android:gravity="center_horizontal"
             android:maxLines="2"
             android:minLines="2"
-            android:text="Hafidz 30 Jus | Imam Masjid di Masjid Cheng Ho"
             android:textColor="@color/black"
-            android:textSize="10sp" />
+            android:textSize="12sp"
+            android:textStyle="bold"
+            tools:text="Hafidz 30 Jus | Imam Masjid di Masjid Cheng Ho" />
 
         <View
             android:id="@+id/view_item_mahasiswa2"
